# CS162-VisuAlgo

./: .clang-uml  .gitignore  CMakeLists.txt  Doxyfile  README.md  USER_MANUAL.md
.github/workflows/: build.yml
UnitTest/: List.test.cpp
UnitTest/DataStructures/: SinglyLinkedList.test.cpp
UnitTest/Operations/Create/: Create.test.cpp
docs/: dir_000000_000005.html  dir_000003_000001.html  dir_000003_000006.html  dir_000003_000012.html  dir_000004_000006.html  dir_000004_000007.html  dir_000008_000001.html  dir_000008_000005.html  dir_000009_000000.html  dir_000009_000001.html  dir_000009_000005.html  dir_000009_000006.html  dir_000010_000005.html  dir_000013_000001.html  dir_000013_000007.html  dir_1c840066aaa5040a4462ebe5975691ec.js  dir_1c840066aaa5040a4462ebe5975691ec_dep.map  dir_1c840066aaa5040a4462ebe5975691ec_dep.md5  dir_1dffe81e848751e41a20ba2e6b14b23f.html  dir_1dffe81e848751e41a20ba2e6b14b23f.js  dir_1dffe81e848751e41a20ba2e6b14b23f_dep.map  dir_2c3d9b07b424a3deac923592ce1e461d.html  dir_2c3d9b07b424a3deac923592ce1e461d.js  dir_2c3d9b07b424a3deac923592ce1e461d_dep.map  dir_418f1c0c7a7af3f93e93ef60c934c206.js  dir_50cd6d7919d5d0b557856150c7c85f27.html  dir_50cd6d7919d5d0b557856150c7c85f27_dep.map  dir_541cef6af5bca1ead5138ee7ddc4c914_dep.map  dir_541cef6af5bca1ead5138ee7ddc4c914_dep.md5  dir_5d15ac1d994aea77852a26dba5924af0.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_721a74ea40d2768c46a3c9514389a16b.html  dir_721a74ea40d2768c46a3c9514389a16b_dep.md5  dir_79209be76ac63f02fe35ce431f7333ff.html  dir_79209be76ac63f02fe35ce431f7333ff.js  dir_79209be76ac63f02fe35ce431f7333ff_dep.map  dir_7b866ceb771b5d2f0620aa14fb2cc5e6.html  (+86 more)
docs/d0/d01/: Algorithms_2LinkedList_2SinglyLinkedList_8cpp__incl.md5
docs/d0/d17/: classFontHolder__coll__graph.map  classFontHolder__coll__graph.md5
docs/d0/d1c/: Main_8cpp__incl.map
docs/d0/d1e/: classGUI_1_1Footer__coll__graph.md5
docs/d0/d25/: NavigationBar_8cpp.html  NavigationBar_8cpp_source.html
docs/d0/d26/: StaticArray_8cpp.html
docs/d0/d37/: classGUI_1_1SinglyLinkedList__inherit__graph.map  classGUI_1_1SinglyLinkedList__inherit__graph.md5
docs/diagrams/: Algorithm.puml  Animation.puml  Component.puml  Core.puml  GUI.puml  State.puml  Visualizer.puml
docs/search/: all_1.js  all_13.js  all_15.js  all_2.js  all_4.js  all_8.js  all_a.js  all_b.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_2.js  classes_4.js  classes_6.js  classes_8.js  classes_9.js  classes_b.js  classes_c.js  classes_d.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enums_4.js  enumvalues_0.js  enumvalues_3.js  enumvalues_4.js  enumvalues_7.js  enumvalues_b.js  enumvalues_d.js  enumvalues_f.js  files_7.js  files_c.js  functions_0.js  functions_10.js  functions_13.js  functions_2.js  functions_4.js  functions_5.js  (+22 more)
html/: annotated.html  annotated_dup.js  classes.html  dir_000000_000001.html  dir_000000_000012.html  dir_000001_000005.html  dir_000001_000006.html  dir_000002_000005.html  dir_000003_000000.html  dir_000003_000005.html  dir_000004_000001.html  dir_000004_000012.html  dir_000005_000001.html  dir_000005_000006.html  dir_000005_000007.html  dir_000005_000012.html  dir_000006_000005.html  dir_000010_000006.html  dir_000010_000007.html  dir_000010_000011.html  dir_000011_000000.html  dir_000011_000001.html  dir_000011_000005.html  dir_000011_000006.html  dir_000011_000012.html  dir_000012_000006.html  dir_1c840066aaa5040a4462ebe5975691ec.html  dir_1dffe81e848751e41a20ba2e6b14b23f_dep.md5  dir_2c3d9b07b424a3deac923592ce1e461d_dep.md5  dir_418f1c0c7a7af3f93e93ef60c934c206.html  dir_418f1c0c7a7af3f93e93ef60c934c206_dep.map  dir_418f1c0c7a7af3f93e93ef60c934c206_dep.md5  dir_50cd6d7919d5d0b557856150c7c85f27.js  dir_50cd6d7919d5d0b557856150c7c85f27_dep.md5  dir_541cef6af5bca1ead5138ee7ddc4c914.html  dir_541cef6af5bca1ead5138ee7ddc4c914.js  dir_5d15ac1d994aea77852a26dba5924af0.js  dir_5d15ac1d994aea77852a26dba5924af0_dep.map  dir_5d15ac1d994aea77852a26dba5924af0_dep.md5  dir_721a74ea40d2768c46a3c9514389a16b.js  (+117 more)
html/search/: all_0.js  all_10.js  all_11.js  all_12.js  all_14.js  all_16.js  all_3.js  all_5.js  all_6.js  all_7.js  all_c.js  classes_1.js  classes_3.js  classes_5.js  classes_7.js  classes_a.js  defines_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_5.js  enumvalues_6.js  enumvalues_8.js  enumvalues_9.js  enumvalues_a.js  enumvalues_c.js  enumvalues_e.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_8.js  files_9.js  files_a.js  files_b.js  files_d.js  files_e.js  files_f.js  (+31 more)
include/: gui_file_dialog.h
src/: Application.cpp  Application.hpp  CategoryInfo.cpp  CategoryInfo.hpp  Component.cpp  Component.hpp  Container.cpp  Container.hpp  DSInfo.cpp  DSInfo.hpp  FontHolder.cpp  FontHolder.hpp  Global.hpp  Main.cpp  NonCopyable.hpp  ResourceIdentifiers.hpp  SceneNode.cpp  SceneNode.hpp  Settings.cpp  Settings.hpp  State.cpp  State.hpp  StateIdentifiers.hpp  StateStack.cpp  StateStack.hpp  TextureHolder.cpp  TextureHolder.hpp  Utils.cpp  Utils.hpp
src/Algorithms/: Algorithm.hpp
src/Animation/: AnimationController.hpp  AnimationFactory.cpp  AnimationFactory.hpp  AnimationState.hpp
src/Components/: Button.cpp  Button.hpp  Card.cpp  Card.hpp  InputField.cpp  InputField.hpp  IntegerInputField.cpp  NavigationBar.cpp  NavigationBar.hpp  OperationContainer.cpp  OperationContainer.hpp  OperationList.cpp  OperationList.hpp  OptionInputField.cpp  OptionInputField.hpp
src/Core/: Deque.hpp  List.hpp  Node.hpp  Queue.hpp  Stack.hpp
src/Identifiers/: CategoryIdentifiers.hpp  CategoryInfo.cpp  CategoryInfo.hpp  ColorThemeIdentifiers.hpp  DSIdentifiers.hpp  DSInfo.cpp  DSInfo.hpp  ResourceIdentifiers.hpp  StateIdentifiers.hpp
src/States/: HomepageState.cpp  HomepageState.hpp  SettingsState.cpp  SettingsState.hpp
src/Utils/: Random.cpp  Random.hpp  Utils.cpp  Utils.hpp
unittest/: List.test.cpp  Queue.test.cpp  Stack.test.cpp
(+3612 files in other folders)
